글쓰기 버튼 처음으로 버튼  구현

--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -21,5 +21,17 @@
     border-color: #008000;     /* 테두리 색도 동일하게 */
     color: white;              /* 글자 색 */
 }
-    
+
+/* 글쓰기버튼,처음으로버튼 색조절 */
+.light-gray-btn {
+    color: #6c757d;          /* 글자 색 연한 회색 */
+    border-color: #d3d3d3;   /* 테두리 연한 회색 */
+    background-color: #f8f9fa; /* 배경도 연한 회색 */
+}
+
+.light-gray-btn:hover {
+    color: #495057;
+    border-color: #c0c0c0;
+    background-color: #e9ecef;
+}
 }
