0113 1시 병합 전 커밋

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -82,9 +82,8 @@
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link fw-bold" style="cursor:pointer">병원</a></li>
-          <li class="nav-item"><a class="nav-link fw-bold" style="cursor:pointer">상품</a></li>
-        </ul>
-      </div>
+		<li class="nav-item"><a class="nav-link fw-bold" th:href="@{/productList}" style="cursor:pointer">상품</a></li> 
+	</div>
     </div>
   </div>
 </div>
