--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -45,7 +45,7 @@
 										</ul>
 									</li>
 									<li class="nav-item"><a class="nav-link fw-bold">병원</a></li>
-									<li class="nav-item"><a class="nav-link fw-bold">상품</a></li>
+									<li class="nav-item"><a class="nav-link fw-bold" th:href="@{/productList}">상품</a></li>
 								</ul>
 							</div>
 						</div>
