--- a/src/main/resources/templates/views/product/productList.html
+++ b/src/main/resources/templates/views/product/productList.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ReeFlo - 쇼핑몰</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -64,6 +67,7 @@
     </style>
 </head>
 <body>
+    <div th:replace="~{fragments/header :: header}"></div>
 
     <div class="search-wrapper">
         <div class="search-inner">
