--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,19 +24,19 @@
               <!-- 로그인 폼 용 -->
               <li class="nav-item">
                 <th:block th:unless="${session.isLogin}">
-                  <a class="nav-link text-dark" th:href="@{loginForm}">Login</a>
+                  <a class="nav-link text-dark" th:href="@{/loginForm}">Login</a>
                 </th:block>
                 <th:block th:if="${session.isLogin}">
-                  <a class="nav-link text-dark" th:href="@{loginOut}">Logout</a>
+                  <a class="nav-link text-dark" th:href="@{/loginOut}">Logout</a>
                 </th:block>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" th:href="@{joinForm}">Join</a>
+                <a class="nav-link text-dark" th:href="@{/joinForm}">Join</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" style ="cursor : pointer">My page</a>
                 <ul class="dropdown-menu text-dark">
-                  <li><a class="dropdown-item text-dark" th:href="@{userUpdateForm}">Edit profile</a></li>
+                  <li><a class="dropdown-item text-dark" th:href="@{/userUpdateForm}">Edit profile</a></li>
                   <li><a class="nav-link text-dark" th:href="@{#}" data-bs-toggle="modal" data-bs-target="#alertModal">Alerts</a></li>
                   <li><hr class="dropdown-divider text-dark"></li>
                   <li><a class="dropdown-item text-dark" href="#">My Diary</a></li>
