--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <title>동물 병원 종합 정보 서비스 Reeflo</title>
-<link th:href="@{bootstrap/bootstrap.min.css}" rel="stylesheet" >
-<script th:src="@{js/jquery-3.7.1.min.js}"></script>
-<link th:href="@{css/header.css}" rel="stylesheet" />
+<link th:href="@{/bootstrap/bootstrap.min.css}" rel="stylesheet" >
+<link th:href="@{/css/header.css}" rel="stylesheet" />
+<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
 <style>
 </style>
 </head>
@@ -58,7 +58,7 @@
 	</div>	
 	<!-- joinForm 로그인 상태로 들어갈 시 뜨는 알림  -->
 	<script th:if="${msg != null}"> alert('[[${msg}]]');</script>
-<script th:src="@{bootstrap/bootstrap.bundle.min.js}"></script>
-<script th:src="@{js/user.js}"></script>
+<script th:src="@{/bootstrap/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/user.js}"></script>
 </body>
 </html>
