게시글 추가 완료 썸네일 오류 발생

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
         <!-- 로고 -->
-        <a th:href ="@{mainPage}">
+        <a th:href ="@{/mainPage}">
         	<img src="/upload/main/mainLogo2.png" style="width:200px;" class ="ms-2">
         </a>
       </div>
